--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
-.buttons {
-    border: 1px solid black;
-    margin: 1px;
-    padding: 1px;
+.button {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+#Rock, #Paper, #Scissors{
+    border-radius: .5rem;
+    margin: 1rem;
+    font-size: 1.5rem;
+    padding: 1rem .5rem;
+    transition: all .07s ease;
+    height: 10rem;
+    width: 10rem;
+    text-align: center;
     color: white;
+    background: black;
+    text-shadow: 0 0 .5rem black;
 }
