--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+
 .button {
     display: flex;
     flex: 1;
